--- a/package.json
+++ b/package.json
@@ -1,3 +1,12 @@
-git add package.json
-git commit -m "Add package.json"
-git push origin master
+{
+  "name": "chat-app-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "cors": "^2.8.5"
+  }
+}
